# tunewright

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/tagstudio-core/: Cargo.toml
crates/tagstudio-core/src/: actions.rs  audio.rs  expr.rs  filename_to_tag.rs  format_string.rs  lib.rs  picture.rs  rename.rs  scanner.rs  types.rs
crates/tagstudio-lookup/: Cargo.toml
crates/tagstudio-lookup/src/: applemusic.rs  lib.rs  musicbrainz.rs  types.rs
crates/tagstudio-server/: Cargo.toml
crates/tagstudio-server/src/: auth.rs  config.rs  error.rs  main.rs  state.rs  users.rs
crates/tagstudio-server/src/routes/: actions.rs  coverart.rs  filename_to_tag.rs  files.rs  lookup.rs  mod.rs  rename.rs  tags.rs
crates/tunewright-core/: Cargo.toml
crates/tunewright-core/src/: actions.rs  audio.rs  expr.rs  filename_to_tag.rs  format_string.rs  fsutil.rs  lib.rs  locks.rs  picture.rs  rename.rs  scanner.rs  types.rs
crates/tunewright-lookup/: Cargo.toml
crates/tunewright-lookup/src/: applemusic.rs  lib.rs  musicbrainz.rs  types.rs
crates/tunewright-server/: Cargo.toml
crates/tunewright-server/src/: auth.rs  config.rs  error.rs  main.rs  state.rs  users.rs
crates/tunewright-server/src/routes/: actions.rs  coverart.rs  filename_to_tag.rs  files.rs  health.rs  lookup.rs  mod.rs  rename.rs  tags.rs
docs/: api.md
frontend/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  vitest.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: sanity.test.ts
frontend/src/lib/api/: actions.ts  auth.ts  client.ts  coverart.ts  filename-to-tag.ts  files.ts  lookup.ts  rename.ts  tags.ts
frontend/src/lib/components/actions/: ActionsModal.svelte
frontend/src/lib/components/common/: ConfirmModal.svelte  ContextMenu.svelte  FolderPicker.svelte  Modal.svelte  Toasts.svelte
frontend/src/lib/components/filename2tag/: FilenameToTagModal.svelte
frontend/src/lib/components/grid/: FileGrid.svelte
frontend/src/lib/components/layout/: FilterBar.svelte  PathBar.svelte  StatusBar.svelte  ThemeMenu.svelte  Toolbar.svelte  UserManagementModal.svelte  UserMenu.svelte
frontend/src/lib/components/lookup/: LookupModal.svelte
frontend/src/lib/components/rename/: RenameModal.svelte
frontend/src/lib/components/tagpanel/: TagPanel.svelte
frontend/src/lib/icons/: Icon.svelte  Logo.svelte  index.ts
frontend/src/lib/services/: applyRelease.test.ts  applyRelease.ts
frontend/src/lib/stores/: auth.ts  files.test.ts  files.ts  persisted.test.ts  persisted.ts  tags.test.ts  tags.ts  theme.test.ts  theme.ts  toast.test.ts  toast.ts  ui.ts
frontend/src/lib/styles/: no-ai-tells.test.ts  tokens.css  tokens.test.ts
frontend/src/lib/theme/: resolve.test.ts  resolve.ts
frontend/src/lib/types/: audio.ts
frontend/src/lib/utils/: format.test.ts  format.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/register/: +page.svelte
frontend/src/routes/setup/: +page.svelte
