[workspace]
resolver = "2"
members = [
    "crates/tagstudio-core",
    "crates/tagstudio-lookup",
    "crates/tagstudio-server",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
