[workspace]
resolver = "2"
members = [
    "crates/tagstudio-core",
    "crates/tagstudio-lookup",
    "crates/tagstudio-server",
]

[workspace.package]
version = "0.5.1"
edition = "2021"
license = "MIT"
description = "A self-hosted web application for editing audio file metadata"
repository = "https://github.com/krabhi4/tagstudio"
homepage = "https://github.com/krabhi4/tagstudio"
readme = "README.md"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
