[workspace]
resolver = "2"
members = [
    "crates/tunewright-core",
    "crates/tunewright-lookup",
    "crates/tunewright-server",
]

[workspace.package]
version = "0.6.0"
edition = "2021"
rust-version = "1.89.0"
license = "MIT"
description = "A self-hosted web application for editing audio file metadata"
repository = "https://github.com/krabhi4/tunewright"
homepage = "https://github.com/krabhi4/tunewright"
readme = "README.md"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
