[package]
name = "tagstudio-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lofty = "0.24"
image = { version = ">=0.25.0, <0.25.11", default-features = false, features = ["jpeg", "png"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = "0.11"
hex = "0.4"
rayon = "1.12"
regex = "1"
tracing = { workspace = true }
walkdir = "2"
