[package]
name = "tagstudio-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tagstudio-core = { path = "../tagstudio-core" }
tagstudio-lookup = { path = "../tagstudio-lookup" }
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { workspace = true }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.9"
rayon = "1.10"
hex = "0.4"
argon2 = "0.5"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
