[package]
name = "tunewright-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tunewright-core = { path = "../tunewright-core" }
tunewright-lookup = { path = "../tunewright-lookup" }
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
tokio = { workspace = true }
tower-http = { version = "0.6", features = ["fs", "trace"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.13", features = ["json"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.10"
rayon = "1.12"
hex = "0.4"
argon2 = "0.5"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
